no need of frontier in 164

--- a/test/Zmumu_fromRAW.cfg
+++ b/test/Zmumu_fromRAW.cfg
@@ -1,10 +1,10 @@
 process HLTMuonOfflineAnalysis  = {
 
  include "Configuration/StandardSequences/data/FakeConditions.cff"
-   include "HLTrigger/Configuration/data/rawToDigi/frontierCablingSetup.cff"
+#   include "HLTrigger/Configuration/data/rawToDigi/frontierCablingSetup.cff"
 
 #----------------- Input file ---------RAW file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = 50}
+  untracked PSet maxEvents = {untracked int32 input = -1 }
   source = PoolSource{
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
