adding reference to Reco

--- a/test/Zmumu_fromDIGI.cfg
+++ b/test/Zmumu_fromDIGI.cfg
@@ -4,17 +4,25 @@ process HLTMuonOfflineAnalysis  = {
 #   include "HLTrigger/Configuration/data/rawToDigi/frontierCablingSetup.cff"
 
 #----------------- Input file ---------RAW file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = 50}
+  untracked PSet maxEvents = {untracked int32 input = 5000}
   source = PoolSource{
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/00602A5D-4761-DC11-9CD7-0030487248DF.root',
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/04DB795C-3D61-DC11-884C-001A92971AAA.root',
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/1ED1C5E7-4161-DC11-BA4B-001731AF6AC5.root',
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/3670DE21-4261-DC11-8989-001731AF66A7.root',
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/3E3DC8B8-5561-DC11-A14F-001731AF685F.root',
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/6494CCFA-4161-DC11-8801-003048767653.root',
-'/store/mc/2007/9/11/RelVal-RelValZMM-1189521830/0000/E69CAD03-4B61-DC11-8CE2-003048767D6B.root'
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/20279FC3-C480-DC11-B65F-000423D6B328.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/42FE834D-B780-DC11-8C70-000423D9939C.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/5808BE4E-B27F-DC11-B565-000423D94534.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/684530C4-B47F-DC11-AE4C-000423D94534.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/72071364-D880-DC11-B1AB-001617DF785A.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/78D557AD-B37F-DC11-98DB-000423D944F8.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/8041A9FD-B17F-DC11-8BD4-000423D944F8.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/841B752E-AF7F-DC11-B0C3-000E0C3F094A.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/9C6799AF-3B80-DC11-A5B3-00304885ABA0.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/ACFDBB00-B47F-DC11-84B4-000423D944F8.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/C6786047-BA80-DC11-BB5A-000423D9870C.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/CAF5ACA3-1182-DC11-8950-000423D6B1CC.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/DE1D1B93-B17F-DC11-9FBD-000423D99BF2.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/F2B17516-B37F-DC11-8B4E-000423D98834.root',
+'/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/F8AE8F11-3081-DC11-A582-000423D98DD4.root'
     }
   }
 
@@ -30,7 +38,9 @@ process HLTMuonOfflineAnalysis  = {
  
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
       bool UseMuonFromGenerator=true
+      bool UseMuonFromReco=true
       untracked InputTag GenLabel=source
+      untracked InputTag RecoLabel=globalMuons
       double MaxTime=150.
       uint32 TimeNbins=150
       InputTag TriggerResultLabel = TriggerResults::HLTMuonOfflineAnalysis
