--- a/test/Zmumu_fromHLT.cfg
+++ b/test/Zmumu_fromHLT.cfg
@@ -33,6 +33,8 @@ process HLTMuonOfflineAnalysis  = {
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
       bool UseMuonFromGenerator=true
       untracked InputTag GenLabel=source
+      bool UseMuonFromReco=true
+      untracked InputTag RecoLabel=globalMuons
       double MaxTime=150.
       uint32 TimeNbins=150
       InputTag TimerLabel = hltTimer
