--- a/test/Zmumu_fromDIGI.cfg
+++ b/test/Zmumu_fromDIGI.cfg
@@ -1,7 +1,6 @@
 process HLTMuonOfflineAnalysis  = {
 
  include "Configuration/StandardSequences/data/FakeConditions.cff"
-#   include "HLTrigger/Configuration/data/rawToDigi/frontierCablingSetup.cff"
 
 #----------------- Input file ---------RAW file-----------------------
   untracked PSet maxEvents = {untracked int32 input = 5000}
@@ -25,8 +24,9 @@ process HLTMuonOfflineAnalysis  = {
 '/store/mc/2007/10/20/RelVal-RelValZMM-1192895175/0000/F8AE8F11-3081-DC11-A582-000423D98DD4.root'
     }
   }
+# need to change HLTrigger/Configuration/data/common/HLTSetup.cff to case1
 
-# One must change "HLTrigger/Configuration/data/common/HLTSetup.cc" to take case1 instead of default case2
+  include "HLTrigger/Configuration/data/common/HLTSetupCase1.cff"
   include "HLTrigger/Configuration/data/main/Muon.cff"
   service = TimerService {}
   module theTimer = myTimer from "HLTrigger/Timer/data/timer.cfi"	
