--- a/test/Zmumu_fromHLT.cfg
+++ b/test/Zmumu_fromHLT.cfg
@@ -2,18 +2,16 @@ process HLTMuonOfflineAnalysis  = {
 
 
 #----------------- Input file ---------RAW+HLT file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = 200}
+  untracked PSet maxEvents = {untracked int32 input = 10000}
   source = PoolSource{
     untracked uint32 skipEvents=0
-    untracked vstring fileNames ={
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/0CAAA9BB-0858-DC11-A6CE-000423D655A2.root',
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/24120199-5D58-DC11-8802-00304885AA38.root',
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/46B16E74-0858-DC11-9C0A-001617C3B762.root',
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/4ACC4380-0858-DC11-9A63-000423D94E48.root',
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/9E0AFD75-0858-DC11-8165-000423D6B1CC.root',
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/C8E3F772-0858-DC11-A851-000423D9880C.root',
-'/store/RelVal/2007/8/31/RelVal-RelVal145Z-MM-1188590969/0000/DE2AD1BE-0858-DC11-99F7-001617C3B662.root'
-    }
+    untracked vstring fileNames ={'/store/CSA07/2007/11/19/chowdesplit4/0000/0033B14A-F296-DC11-8C65-003048562970.root',
+'/store/CSA07/2007/11/19/chowdesplit4/0000/02B92A37-F596-DC11-944A-001617E30CC2.root',
+'/store/CSA07/2007/11/19/chowdesplit4/0000/02F8D974-F196-DC11-9F04-00304856282E.root',
+'/store/CSA07/2007/11/19/chowdesplit4/0000/062FE34D-F296-DC11-A8FE-001617DBD558.root',
+'/store/CSA07/2007/11/19/chowdesplit4/0000/0692B1EC-F496-DC11-A685-00304885B42A.root',
+'/store/CSA07/2007/11/19/chowdesplit4/0000/06FE01DD-F296-DC11-9E58-001617C3B706.root'
+}
   }
 
   module filter=MCParticlePairFilter {
@@ -31,6 +29,8 @@ process HLTMuonOfflineAnalysis  = {
 #------------ Efficiency/Rate Analyzer --------------------------------
  
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
+      bool UseMuonFromReco=false
+      untracked InputTag RecoLabel=globalMuons
       bool UseMuonFromGenerator=true
       untracked InputTag GenLabel=source
       bool UseMuonFromReco=true
