--- a/test/Zmumu_fromRAW.cfg
+++ b/test/Zmumu_fromRAW.cfg
@@ -8,13 +8,17 @@ process HLTMuonOfflineAnalysis  = {
   source = PoolSource{
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'/store/RelVal/2007/8/27/RelVal-RelVal145Z-MM-1188227878/0000/387AACDE-B754-DC11-BF58-000423D8F63C.root',
-'/store/RelVal/2007/8/27/RelVal-RelVal145Z-MM-1188227878/0000/9882ECEF-B754-DC11-A96B-001617DBD288.root',
-'/store/RelVal/2007/8/27/RelVal-RelVal145Z-MM-1188227878/0000/AA9BCDDE-B754-DC11-8A3E-000423D987FC.root',
-'/store/RelVal/2007/8/27/RelVal-RelVal145Z-MM-1188227878/0000/B6BA5A87-B654-DC11-8B08-001617DBD288.root'
-    }
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/002A5336-6694-DC11-9CAC-001617C3B6CC.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/04156639-8494-DC11-842B-001617E30D0A.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/044E2EC3-6C94-DC11-92BF-000423D98634.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/0618CAA9-6E94-DC11-8894-000E0C3F06D0.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/0807B518-6594-DC11-840C-000423D6B42C.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/0C10B27C-6594-DC11-A722-000423D6B2D8.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/0C7A1702-6694-DC11-A36C-001617E30D52.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/0CB24E20-7494-DC11-87FA-001617C3B71E.root',
+'/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/12422DA7-6494-DC11-8260-001617C3B6B4.root'
   }
-
+}
 
   include "HLTrigger/Configuration/data/common/HLTSetup.cff"
   include "HLTrigger/Configuration/data/main/Muon.cff"
@@ -28,8 +32,8 @@ process HLTMuonOfflineAnalysis  = {
  
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
       bool UseMuonFromGenerator=true
+      bool UseMuonFromReco=false
       untracked InputTag GenLabel=source
-      bool UseMuonFromReco=true
       untracked InputTag RecoLabel=globalMuons
       double MaxTime=150.
       uint32 TimeNbins=150
