changing filter names

--- a/test/Wmu_fromHLT.cfg
+++ b/test/Wmu_fromHLT.cfg
@@ -4,17 +4,17 @@ process HLTMuonOfflineAnalysis  = {
 #----------------- Input file ---------RAW+HLT file-----------------------
   untracked PSet maxEvents = {untracked int32 input = 10000}
   source = PoolSource{
+    
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'file:Zmumu/5A9117FF-1004-DD11-A941-000423D98DB4.root',
-'file:Zmumu/6882E8E3-1004-DD11-98F2-0019DB29C614.root',
-'file:Zmumu/6E4AE79E-1004-DD11-B54D-001617DBD332.root',
-'file:Zmumu/A433B2F5-1004-DD11-9017-001617C3B6DE.root',
-'file:Zmumu/B24DFF4C-1204-DD11-88A4-00304885AB9E.root',
-'file:Zmumu/C244F810-1204-DD11-8C0E-0019DB29C620.root',
-'file:Zmumu/D869B170-1304-DD11-A690-000423D6CA6E.root',
-'file:Zmumu/E821C2B6-1204-DD11-8C4D-00304885AAC2.root',
-'file:Zmumu/FE93A1EC-1004-DD11-BECD-000423D6B48C.root'
+'file:Wmu/0085E3E8-0C04-DD11-B83E-000423D99394.root',
+'file:Wmu/00FB0906-1204-DD11-A506-001617C3B778.root',
+'file:Wmu/049E6BD7-0F04-DD11-8F37-000423D996B4.root',
+'file:Wmu/2A69344D-1204-DD11-9E07-00304885B0F6.root',
+'file:Wmu/383925DB-0F04-DD11-9665-000423D996C8.root',
+'file:Wmu/3861C68E-1004-DD11-A9E5-000423D99996.root',
+'file:Wmu/C6B0C242-0F04-DD11-82F6-000423D6B358.root',
+'file:Wmu/D815A4F8-0F04-DD11-A186-001617DBD556.root'
 }
   }
 
@@ -28,7 +28,7 @@ process HLTMuonOfflineAnalysis  = {
         untracked vint32 Status ={1,1}
   }
 
-# module debug=EventContentAnalyzer{}
+module debug=EventContentAnalyzer{}
 
 #------------ Efficiency/Rate Analyzer --------------------------------
  
@@ -128,15 +128,15 @@ process HLTMuonOfflineAnalysis  = {
       untracked uint32 Nbins = 40
 
       # Output Root file for histograms
-      untracked string RootFileName = "ZmumuAnalyzer.root"
+      untracked string RootFileName = "WmuAnalyzer.root"
   }
 
 #------------ Message Logger ------------------------------------------
    service = MessageLogger {
-    untracked vstring destinations = { "cout","HLTMuonVal.log" }
+    untracked vstring destinations = { "cout","HLTWMuonVal.log" }
     untracked vstring categories =  {  "HLTMuonVal" }
     untracked vstring debugModules =  { "RateAnalyzer" }   
-    untracked PSet HLTMuonVal.log = {untracked string threshold = "INFO"
+    untracked PSet HLTWMuonVal.log = {untracked string threshold = "INFO"
                                    untracked PSet default = { untracked int32 limit = 0 }
                                    untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
@@ -144,6 +144,6 @@ process HLTMuonOfflineAnalysis  = {
    }
 
 #------------ End path ------------------------------------------------
-
+  
   endpath analyzerpath = {RateAnalyzer}
 }
