--- a/test/Zmumu_fromRAW.cfg
+++ b/test/Zmumu_fromRAW.cfg
@@ -1,21 +1,32 @@
 process HLTMuonOfflineAnalysis  = {
 
- include "Configuration/StandardSequences/data/FakeConditions.cff"
+include "Configuration/StandardSequences/data/FrontierConditions.cff"
 #   include "HLTrigger/Configuration/data/rawToDigi/frontierCablingSetup.cff"
 
 #----------------- Input file ---------RAW file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = -1 }
   source = PoolSource{
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'file:2C68BD15-28EC-DC11-A19D-000E0C3F0994.root',
-'file:3C17F4C3-29EC-DC11-93DA-0030487C618C.root',
-'file:9CFBC0D4-25EC-DC11-9C73-0030487A18A4.root'
+
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/08456B9D-5903-DD11-96BD-000423D99394.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/10830A88-5703-DD11-B5AB-000423D99E46.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/1E6C89B8-5603-DD11-A3CF-0030488318E0.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/240E6DA0-5603-DD11-B57A-000423D99A8E.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/32FD0D80-5B03-DD11-AD3C-000423D992DC.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/4058AD70-5D03-DD11-8CE5-000423D992DC.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/48A572EE-7E03-DD11-B5DF-001617C3B5F4.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/58D7D60F-5D03-DD11-9121-000423D98EC4.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/66C5B47A-5903-DD11-9B93-00304885AA7C.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/7622FF1D-5E03-DD11-82F7-000423D992DC.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/AE2B1E02-5603-DD11-9F68-000423D9517C.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/B60DFCEC-5703-DD11-8B77-000423D99E46.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/C8BDD9F4-5503-DD11-94D2-000423D98950.root',
+'/store/relval/2008/4/5/RelVal-RelValZMM-1207410101/0000/D8DD919A-5E03-DD11-AA59-000423D6CA02.root'
+
  }
 }
 
-  include "HLTrigger/Configuration/data/common/HLTSetup.cff"
-  include "HLTrigger/Configuration/data/main/Muon.cff"
+  include "HLTriggerOffline/Muon/test/HLT_2E30.cff"
   service = TimerService {}
   module theTimer = myTimer from "HLTrigger/Timer/data/timer.cfi"	
 
@@ -47,56 +58,56 @@ process HLTMuonOfflineAnalysis  = {
       }
       VPSet TriggerCollection = {
       	 {
-          InputTag L1CollectionLabel = SingleMuIsoL1Filtered
+          InputTag L1CollectionLabel = hltSingleMuIsoL1Filtered
           VInputTag HLTCollectionLabels = {   
-            SingleMuIsoL2PreFiltered, SingleMuIsoL2IsoFiltered
-          , SingleMuIsoL3PreFiltered, SingleMuIsoL3IsoFiltered
+            hltSingleMuIsoL2PreFiltered, hltSingleMuIsoL2IsoFiltered
+          , hltSingleMuIsoL3PreFiltered, hltSingleMuIsoL3IsoFiltered
          }	  
      	  double L1ReferenceThreshold = 7.
      	  double HLTReferenceThreshold = 11.
 	  uint32 NumberOfObjects = 1
          },
       	 {
-          InputTag L1CollectionLabel = SingleMuNoIsoL1Filtered
+          InputTag L1CollectionLabel = hltSingleMuNoIsoL1Filtered
           VInputTag HLTCollectionLabels = {   
-            SingleMuNoIsoL2PreFiltered, SingleMuNoIsoL3PreFiltered 
+            hltSingleMuNoIsoL2PreFiltered, hltSingleMuNoIsoL3PreFiltered 
           }	  
      	  double L1ReferenceThreshold = 7.
      	  double HLTReferenceThreshold = 16.
 	  uint32 NumberOfObjects = 1
          },
       	 {
-          InputTag L1CollectionLabel = DiMuonNoIsoL1Filtered
+          InputTag L1CollectionLabel = hltDiMuonNoIsoL1Filtered
           VInputTag HLTCollectionLabels = {   
-            DiMuonNoIsoL2PreFiltered, DiMuonNoIsoL3PreFiltered
+            hltDiMuonNoIsoL2PreFiltered, hltDiMuonNoIsoL3PreFiltered
          }	  
      	  double L1ReferenceThreshold = 3.
      	  double HLTReferenceThreshold = 3.
 	  uint32 NumberOfObjects = 2
          },
       	 {
-          InputTag L1CollectionLabel = DiMuonIsoL1Filtered
+          InputTag L1CollectionLabel = hltDiMuonIsoL1Filtered
           VInputTag HLTCollectionLabels = {   
-            DiMuonIsoL2PreFiltered,DiMuonIsoL2IsoFiltered,
-	    DiMuonIsoL3PreFiltered,DiMuonIsoL3IsoFiltered
+            hltDiMuonIsoL2PreFiltered,hltDiMuonIsoL2IsoFiltered,
+	    hltDiMuonIsoL3PreFiltered,hltDiMuonIsoL3IsoFiltered
          }	  	
      	  double L1ReferenceThreshold = 3.
      	  double HLTReferenceThreshold = 3.
 	  uint32 NumberOfObjects = 2
          },
       	 {
-          InputTag L1CollectionLabel = JpsiMML1Filtered
+          InputTag L1CollectionLabel = hltJpsiMML1Filtered
           VInputTag HLTCollectionLabels = {   
-            JpsiMML2Filtered,JpsiMML3Filtered
+            hltJpsiMML2Filtered,hltJpsiMML3Filtered
          }	  	
      	  double L1ReferenceThreshold = 3.
      	  double HLTReferenceThreshold = 3.
 	  uint32 NumberOfObjects = 2
          },
       	 {
-          InputTag L1CollectionLabel = ZMML1Filtered
+          InputTag L1CollectionLabel = hltZMML1Filtered
           VInputTag HLTCollectionLabels = {   
-            ZMML2Filtered,ZMML3Filtered
+            hltZMML2Filtered,hltZMML3Filtered
          }	  	
      	  double L1ReferenceThreshold = 3.
      	  double HLTReferenceThreshold = 7.
@@ -141,5 +152,5 @@ process HLTMuonOfflineAnalysis  = {
         untracked vstring outputCommands = { "drop *",
 					     "keep *_*_*_HLTMuonOfflineAnalysis"}
 }
-  endpath analyzerpath = {theTimer,RateAnalyzer,out}
+  endpath analyzerpath = {theTimer,RateAnalyzer}
 }
