Changing DR for matching and bug fix

--- a/test/Wmu_fromHLT.cfg
+++ b/test/Wmu_fromHLT.cfg
@@ -2,37 +2,37 @@ process HLTMuonOfflineAnalysis  = {
 
 
 #----------------- Input file ---------RAW+HLT file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = 10000}
+  untracked PSet maxEvents = {untracked int32 input = -1}
   source = PoolSource{
-    
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'file:Wmu/0085E3E8-0C04-DD11-B83E-000423D99394.root',
-'file:Wmu/00FB0906-1204-DD11-A506-001617C3B778.root',
-'file:Wmu/049E6BD7-0F04-DD11-8F37-000423D996B4.root',
-'file:Wmu/2A69344D-1204-DD11-9E07-00304885B0F6.root',
-'file:Wmu/383925DB-0F04-DD11-9665-000423D996C8.root',
-'file:Wmu/3861C68E-1004-DD11-A9E5-000423D99996.root',
-'file:Wmu/C6B0C242-0F04-DD11-82F6-000423D6B358.root',
-'file:Wmu/D815A4F8-0F04-DD11-A186-001617DBD556.root'
-}
+'file:Wmu/0C965E23-E733-DD11-9730-000423D94524.root',
+'file:Wmu/18AB1548-E533-DD11-8103-000423D9863C.root',
+'file:Wmu/22230C75-E533-DD11-B855-001617E30F4C.root',
+'file:Wmu/445BE145-E533-DD11-8726-000423D98DB4.root',
+'file:Wmu/587F7051-E533-DD11-8554-000423D94990.root',
+'file:Wmu/7AA74B68-E533-DD11-B392-000423D99394.root',
+'file:Wmu/9647DC94-E933-DD11-84A8-001617E30D0A.root',
+'file:Wmu/A27E4448-E533-DD11-9646-000423D94A04.root',
+'file:Wmu/AA21C34B-E533-DD11-9B90-000423D6C8E6.root',
+'file:Wmu/ECFEDF4B-E533-DD11-8D26-000423D9A212.root',
+'file:Wmu/EE506A63-E533-DD11-B9F5-000423D99660.root'
+    }
   }
+ module filter = MCSingleParticleFilter {
+   untracked vint32 ParticleID={-13,13}
+   untracked vdouble MinPt={5,5}
+   untracked vdouble MaxEta={2.1,2.1}
+   untracked vdouble MinEta={-2.1,-2.1}
+ }
 
-  module filter=MCParticlePairFilter {
-        untracked vint32 ParticleID1 = {13}
-        untracked vint32 ParticleID2 = {13}
-        untracked int32 ParticleCharge = -1
-        untracked vdouble MinEta =  {-2.4,-2.4}
-        untracked vdouble MaxEta =  {2.4,2.4}
-        untracked vdouble MinPt ={10,10}
-        untracked vint32 Status ={1,1}
-  }
-
-module debug=EventContentAnalyzer{}
+ module dump = EventContentAnalyzer{}
 
 #------------ Efficiency/Rate Analyzer --------------------------------
  
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
+      untracked bool DQMStore = true
+      untracked string RootFileName = "WmuAnalyzer_210pre5_filterStartUp.root"
       bool UseMuonFromGenerator=true
       untracked InputTag GenLabel=source
       bool UseMuonFromReco=true
@@ -40,7 +40,7 @@ module debug=EventContentAnalyzer{}
       double MaxTime=150.
       uint32 TimeNbins=150
       InputTag TimerLabel = hltTimer
-      InputTag TriggerResultLabel=TriggerResults::GENSIMDIGIL1DIGI2RAWHLT
+      InputTag TriggerResultLabel=TriggerResults::HLT
       untracked PSet TimingModules={
       untracked vstring MuonDigiModules = {"muonCSCDigis","muonDTDigis","muonRPCDigis"}
       untracked vstring CaloDigiModules = {"ecalDigis","ecalPreshowerDigis","hcalDigis"}
@@ -55,65 +55,112 @@ module debug=EventContentAnalyzer{}
       }
       VPSet TriggerCollection = {
       	 {
-          InputTag L1CollectionLabel = hltSingleMuIsoL1Filtered
+          InputTag L1CollectionLabel = hltSingleMuIsoL1Filtered::HLT
           VInputTag HLTCollectionLabels = {   
-            hltSingleMuIsoL2PreFiltered, hltSingleMuIsoL2IsoFiltered
-          , hltSingleMuIsoL3PreFiltered, hltSingleMuIsoL3IsoFiltered
+            hltSingleMuIsoL2PreFiltered::HLT, hltSingleMuIsoL2IsoFiltered::HLT
+          , hltSingleMuIsoL3PreFiltered::HLT, hltSingleMuIsoL3IsoFiltered::HLT
          }	  
      	  double L1ReferenceThreshold = 7.
-     	  double HLTReferenceThreshold = 11.
+     	  double HLTReferenceThreshold = 7.
 	  uint32 NumberOfObjects = 1
          },
       	 {
-          InputTag L1CollectionLabel = hltSingleMuNoIsoL1Filtered
+          InputTag L1CollectionLabel = hltSingleMuNoIsoL1Filtered::HLT
           VInputTag HLTCollectionLabels = {   
-            hltSingleMuNoIsoL2PreFiltered, hltSingleMuNoIsoL3PreFiltered 
+            hltSingleMuNoIsoL2PreFiltered::HLT, hltSingleMuNoIsoL3PreFiltered::HLT 
           }	  
      	  double L1ReferenceThreshold = 7.
-     	  double HLTReferenceThreshold = 16.
+     	  double HLTReferenceThreshold = 7.
 	  uint32 NumberOfObjects = 1
          },
       	 {
-          InputTag L1CollectionLabel = hltDiMuonNoIsoL1Filtered
+          InputTag L1CollectionLabel = hltDiMuonNoIsoL1Filtered::HLT
           VInputTag HLTCollectionLabels = {   
-            hltDiMuonNoIsoL2PreFiltered, hltDiMuonNoIsoL3PreFiltered
+            hltDiMuonNoIsoL2PreFiltered::HLT, hltDiMuonNoIsoL3PreFiltered::HLT
          }	  
-     	  double L1ReferenceThreshold = 3.
-     	  double HLTReferenceThreshold = 3.
-	  uint32 NumberOfObjects = 2
-         },
-      	 {
-          InputTag L1CollectionLabel = hltDiMuonIsoL1Filtered
-          VInputTag HLTCollectionLabels = {   
-            hltDiMuonIsoL2PreFiltered,hltDiMuonIsoL2IsoFiltered,
-	    hltDiMuonIsoL3PreFiltered,hltDiMuonIsoL3IsoFiltered
-         }	  	
-     	  double L1ReferenceThreshold = 3.
-     	  double HLTReferenceThreshold = 3.
-	  uint32 NumberOfObjects = 2
-         },
-      	 {
-          InputTag L1CollectionLabel = hltJpsiMML1Filtered
-          VInputTag HLTCollectionLabels = {   
-            hltJpsiMML2Filtered,hltJpsiMML3Filtered
-         }	  	
-     	  double L1ReferenceThreshold = 3.
-     	  double HLTReferenceThreshold = 3.
-	  uint32 NumberOfObjects = 2
-         },
-      	 {
-          InputTag L1CollectionLabel = hltZMML1Filtered
-          VInputTag HLTCollectionLabels = {   
-            hltZMML2Filtered,hltZMML3Filtered
-         }	  	
      	  double L1ReferenceThreshold = 3.
      	  double HLTReferenceThreshold = 7.
 	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltDiMuonIsoL1Filtered::HLT
+          VInputTag HLTCollectionLabels = {   
+            hltDiMuonIsoL2PreFiltered::HLT,hltDiMuonIsoL2IsoFiltered::HLT,
+	    hltDiMuonIsoL3PreFiltered::HLT,hltDiMuonIsoL3IsoFiltered::HLT
+         }	  	
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltJpsiMML1Filtered::HLT
+          VInputTag HLTCollectionLabels = {   
+            hltJpsiMML2Filtered::HLT,hltJpsiMML3Filtered::HLT
+         }	  	
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltZMML1Filtered::HLT
+          VInputTag HLTCollectionLabels = {   
+            hltZMML2Filtered::HLT,hltZMML3Filtered::HLT
+         }	  	
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale3L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale3L2PreFiltered::HLT,
+	   hltSingleMuPrescale3L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale5L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale5L2PreFiltered::HLT,
+	   hltSingleMuPrescale5L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale77L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale77L2PreFiltered::HLT,
+	   hltSingleMuPrescale77L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 7.
+     	  double HLTReferenceThreshold = 5.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale1710L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale710L2PreFiltered::HLT,
+	   hltSingleMuPrescale710L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 7.
+     	  double HLTReferenceThreshold = 7.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltMuLevel1PathL1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {}      	  
+          double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 1
          }
-       }
+      }
       # Shift to go to 90% efficiency pt values (in number of sigmas for 1/pt) 
       # ORCA values: 3.9 sigmas for L2; 2.2 sigmas for L3
-      untracked vdouble NSigmas90 = { 3.9, 3.9, 2.2, 2.2 }
+       untracked vdouble NSigmas90 = { 3., 3., 3., 3. }
 
       # CrossSection (in nb) = generator cross section * filter efficiency
 #      double CrossSection = 79300000
@@ -128,22 +175,21 @@ module debug=EventContentAnalyzer{}
       untracked uint32 Nbins = 40
 
       # Output Root file for histograms
-      untracked string RootFileName = "WmuAnalyzer.root"
   }
 
 #------------ Message Logger ------------------------------------------
    service = MessageLogger {
-    untracked vstring destinations = { "cout","HLTWMuonVal.log" }
-    untracked vstring categories =  {  "HLTMuonVal" }
+    untracked vstring destinations = { "cout","HLTMuonVal.log" }
+    untracked vstring categories =  {  "HLTMuonVal_WmuStartUp" }
     untracked vstring debugModules =  { "RateAnalyzer" }   
-    untracked PSet HLTWMuonVal.log = {untracked string threshold = "INFO"
-                                   untracked PSet default = { untracked int32 limit = 0 }
+    untracked PSet HLTMuonVal_WmuStartUp.log = {untracked string threshold = "INFO"
+                                   untracked PSet default = { untracked  int32 limit = 0 }
                                    untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
     untracked PSet cout = { untracked string threshold = "WARNING" } 
    }
 
 #------------ End path ------------------------------------------------
-  
-  endpath analyzerpath = {RateAnalyzer}
+
+  path analyzerpath = {filter,RateAnalyzer}
 }
