--- a/test/Zmumu_fromHLT.cfg
+++ b/test/Zmumu_fromHLT.cfg
@@ -2,37 +2,37 @@ process HLTMuonOfflineAnalysis  = {
 
 
 #----------------- Input file ---------RAW+HLT file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = 10000}
+  untracked PSet maxEvents = {untracked int32 input = -1}
   source = PoolSource{
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'file:Zmumu/5A9117FF-1004-DD11-A941-000423D98DB4.root',
-'file:Zmumu/6882E8E3-1004-DD11-98F2-0019DB29C614.root',
-'file:Zmumu/6E4AE79E-1004-DD11-B54D-001617DBD332.root',
-'file:Zmumu/A433B2F5-1004-DD11-9017-001617C3B6DE.root',
-'file:Zmumu/B24DFF4C-1204-DD11-88A4-00304885AB9E.root',
-'file:Zmumu/C244F810-1204-DD11-8C0E-0019DB29C620.root',
-'file:Zmumu/D869B170-1304-DD11-A690-000423D6CA6E.root',
-'file:Zmumu/E821C2B6-1204-DD11-8C4D-00304885AAC2.root',
-'file:Zmumu/FE93A1EC-1004-DD11-BECD-000423D6B48C.root'
-}
+'file:ZmumuStartup/4A3DAF35-E533-DD11-9D80-001617E30F56.root',
+'file:ZmumuStartup/4C567E3C-E533-DD11-901D-000423D99F3E.root',
+'file:ZmumuStartup/6EC2CB33-E533-DD11-9CFA-000423D944F0.root',
+'file:ZmumuStartup/74AF1646-E533-DD11-84EC-001617DBD556.root',
+'file:ZmumuStartup/7CFE4AAD-E833-DD11-8E44-001617E30D40.root',
+'file:ZmumuStartup/84D7FA33-E533-DD11-9334-000423D986C4.root',
+'file:ZmumuStartup/9685E295-E533-DD11-A07D-000423D987FC.root',
+'file:ZmumuStartup/9C28F593-E533-DD11-997C-000423D98BE8.root',
+'file:ZmumuStartup/C6E80E36-E533-DD11-9C52-000423D99394.root',
+'file:ZmumuStartup/EA426746-E533-DD11-BEEB-001617C3B6C6.root',
+'file:ZmumuStartup/FA1DBD3C-E533-DD11-93DF-000423D952C0.root'
+    }
   }
+ module filter = MCSingleParticleFilter {
+   untracked vint32 ParticleID={-13,13}
+   untracked vdouble MinPt={5,5}
+   untracked vdouble MaxEta={2.1,2.1}
+   untracked vdouble MinEta={-2.1,-2.1}
+ }
 
-  module filter=MCParticlePairFilter {
-        untracked vint32 ParticleID1 = {13}
-        untracked vint32 ParticleID2 = {13}
-        untracked int32 ParticleCharge = -1
-        untracked vdouble MinEta =  {-2.4,-2.4}
-        untracked vdouble MaxEta =  {2.4,2.4}
-        untracked vdouble MinPt ={10,10}
-        untracked vint32 Status ={1,1}
-  }
-
-# module debug=EventContentAnalyzer{}
+ module dump = EventContentAnalyzer{}
 
 #------------ Efficiency/Rate Analyzer --------------------------------
  
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
+      untracked bool DQMStore = true
+      untracked string RootFileName = "ZmumuAnalyzer_210pre5_filterSTARTUP.root"
       bool UseMuonFromGenerator=true
       untracked InputTag GenLabel=source
       bool UseMuonFromReco=true
@@ -40,7 +40,7 @@ process HLTMuonOfflineAnalysis  = {
       double MaxTime=150.
       uint32 TimeNbins=150
       InputTag TimerLabel = hltTimer
-      InputTag TriggerResultLabel=TriggerResults::GENSIMDIGIL1DIGI2RAWHLT
+      InputTag TriggerResultLabel=TriggerResults::HLT
       untracked PSet TimingModules={
       untracked vstring MuonDigiModules = {"muonCSCDigis","muonDTDigis","muonRPCDigis"}
       untracked vstring CaloDigiModules = {"ecalDigis","ecalPreshowerDigis","hcalDigis"}
@@ -55,65 +55,112 @@ process HLTMuonOfflineAnalysis  = {
       }
       VPSet TriggerCollection = {
       	 {
-          InputTag L1CollectionLabel = hltSingleMuIsoL1Filtered
+          InputTag L1CollectionLabel = hltSingleMuIsoL1Filtered::HLT
           VInputTag HLTCollectionLabels = {   
-            hltSingleMuIsoL2PreFiltered, hltSingleMuIsoL2IsoFiltered
-          , hltSingleMuIsoL3PreFiltered, hltSingleMuIsoL3IsoFiltered
+            hltSingleMuIsoL2PreFiltered::HLT, hltSingleMuIsoL2IsoFiltered::HLT
+          , hltSingleMuIsoL3PreFiltered::HLT, hltSingleMuIsoL3IsoFiltered::HLT
          }	  
      	  double L1ReferenceThreshold = 7.
-     	  double HLTReferenceThreshold = 11.
+     	  double HLTReferenceThreshold = 7.
 	  uint32 NumberOfObjects = 1
          },
       	 {
-          InputTag L1CollectionLabel = hltSingleMuNoIsoL1Filtered
+          InputTag L1CollectionLabel = hltSingleMuNoIsoL1Filtered::HLT
           VInputTag HLTCollectionLabels = {   
-            hltSingleMuNoIsoL2PreFiltered, hltSingleMuNoIsoL3PreFiltered 
+            hltSingleMuNoIsoL2PreFiltered::HLT, hltSingleMuNoIsoL3PreFiltered::HLT 
           }	  
      	  double L1ReferenceThreshold = 7.
-     	  double HLTReferenceThreshold = 16.
+     	  double HLTReferenceThreshold = 7.
 	  uint32 NumberOfObjects = 1
          },
       	 {
-          InputTag L1CollectionLabel = hltDiMuonNoIsoL1Filtered
+          InputTag L1CollectionLabel = hltDiMuonNoIsoL1Filtered::HLT
           VInputTag HLTCollectionLabels = {   
-            hltDiMuonNoIsoL2PreFiltered, hltDiMuonNoIsoL3PreFiltered
+            hltDiMuonNoIsoL2PreFiltered::HLT, hltDiMuonNoIsoL3PreFiltered::HLT
          }	  
-     	  double L1ReferenceThreshold = 3.
-     	  double HLTReferenceThreshold = 3.
-	  uint32 NumberOfObjects = 2
-         },
-      	 {
-          InputTag L1CollectionLabel = hltDiMuonIsoL1Filtered
-          VInputTag HLTCollectionLabels = {   
-            hltDiMuonIsoL2PreFiltered,hltDiMuonIsoL2IsoFiltered,
-	    hltDiMuonIsoL3PreFiltered,hltDiMuonIsoL3IsoFiltered
-         }	  	
-     	  double L1ReferenceThreshold = 3.
-     	  double HLTReferenceThreshold = 3.
-	  uint32 NumberOfObjects = 2
-         },
-      	 {
-          InputTag L1CollectionLabel = hltJpsiMML1Filtered
-          VInputTag HLTCollectionLabels = {   
-            hltJpsiMML2Filtered,hltJpsiMML3Filtered
-         }	  	
-     	  double L1ReferenceThreshold = 3.
-     	  double HLTReferenceThreshold = 3.
-	  uint32 NumberOfObjects = 2
-         },
-      	 {
-          InputTag L1CollectionLabel = hltZMML1Filtered
-          VInputTag HLTCollectionLabels = {   
-            hltZMML2Filtered,hltZMML3Filtered
-         }	  	
      	  double L1ReferenceThreshold = 3.
      	  double HLTReferenceThreshold = 7.
 	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltDiMuonIsoL1Filtered::HLT
+          VInputTag HLTCollectionLabels = {   
+            hltDiMuonIsoL2PreFiltered::HLT,hltDiMuonIsoL2IsoFiltered::HLT,
+	    hltDiMuonIsoL3PreFiltered::HLT,hltDiMuonIsoL3IsoFiltered::HLT
+         }	  	
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltJpsiMML1Filtered::HLT
+          VInputTag HLTCollectionLabels = {   
+            hltJpsiMML2Filtered::HLT,hltJpsiMML3Filtered::HLT
+         }	  	
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltZMML1Filtered::HLT
+          VInputTag HLTCollectionLabels = {   
+            hltZMML2Filtered::HLT,hltZMML3Filtered::HLT
+         }	  	
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 2
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale3L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale3L2PreFiltered::HLT,
+	   hltSingleMuPrescale3L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale5L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale5L2PreFiltered::HLT,
+	   hltSingleMuPrescale5L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale77L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale77L2PreFiltered::HLT,
+	   hltSingleMuPrescale77L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 7.
+     	  double HLTReferenceThreshold = 5.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltSingleMuPrescale1710L1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {
+           hltSingleMuPrescale710L2PreFiltered::HLT,
+	   hltSingleMuPrescale710L3PreFiltered::HLT
+	  } 
+     	  double L1ReferenceThreshold = 7.
+     	  double HLTReferenceThreshold = 7.
+	  uint32 NumberOfObjects = 1
+         },
+      	 {
+          InputTag L1CollectionLabel = hltMuLevel1PathL1Filtered::HLT 
+          VInputTag HLTCollectionLabels = {}      	  
+          double L1ReferenceThreshold = 3.
+     	  double HLTReferenceThreshold = 3.
+	  uint32 NumberOfObjects = 1
          }
-       }
+      }
       # Shift to go to 90% efficiency pt values (in number of sigmas for 1/pt) 
       # ORCA values: 3.9 sigmas for L2; 2.2 sigmas for L3
-      untracked vdouble NSigmas90 = { 3.9, 3.9, 2.2, 2.2 }
+       untracked vdouble NSigmas90 = { 3., 3., 3., 3. }
 
       # CrossSection (in nb) = generator cross section * filter efficiency
 #      double CrossSection = 79300000
@@ -128,7 +175,6 @@ process HLTMuonOfflineAnalysis  = {
       untracked uint32 Nbins = 40
 
       # Output Root file for histograms
-      untracked string RootFileName = "ZmumuAnalyzer.root"
   }
 
 #------------ Message Logger ------------------------------------------
@@ -137,7 +183,7 @@ process HLTMuonOfflineAnalysis  = {
     untracked vstring categories =  {  "HLTMuonVal" }
     untracked vstring debugModules =  { "RateAnalyzer" }   
     untracked PSet HLTMuonVal.log = {untracked string threshold = "INFO"
-                                   untracked PSet default = { untracked int32 limit = 0 }
+                                   untracked PSet default = { untracked  int32 limit = 0 }
                                    untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
     untracked PSet cout = { untracked string threshold = "WARNING" } 
@@ -145,5 +191,5 @@ process HLTMuonOfflineAnalysis  = {
 
 #------------ End path ------------------------------------------------
 
-  endpath analyzerpath = {RateAnalyzer}
+  path analyzerpath = {filter,RateAnalyzer}
 }
