--- a/test/Zmumu_fromHLT.cfg
+++ b/test/Zmumu_fromHLT.cfg
@@ -19,7 +19,14 @@ process HLTMuonOfflineAnalysis  = {
 'file:ZmumuStartup/FA1DBD3C-E533-DD11-93DF-000423D952C0.root'
     }
   }
- module filter = MCSingleParticleFilter {
+
+service  = DQMStore {
+  untracked string referenceFileName = ""
+  untracked int32 verbose = 0
+}
+
+
+module filter = MCSingleParticleFilter {
    untracked vint32 ParticleID={-13,13}
    untracked vdouble MinPt={5,5}
    untracked vdouble MaxEta={2.1,2.1}
